# claude-conversation-manager

./: .gitignore  LICENSE  README.md  launch-gui.bat  pyproject.toml
src/claude_conv_manager/: __init__.py  cli.py  core.py  gui.py
tests/: __init__.py  test_core.py
