[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-manager"
version = "0.1.0"
description = "Manage Claude Code VS Code extension conversations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pablo Saban"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["claude", "anthropic", "vscode", "conversation", "manager"]

dependencies = []

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-conv-manager = "claude_conv_manager.cli:main"

[project.gui-scripts]
claude-conv-manager-gui = "claude_conv_manager.gui:run_gui"

[project.urls]
Homepage = "https://github.com/psaban20/claude-conversation-manager"
Repository = "https://github.com/psaban20/claude-conversation-manager"
Issues = "https://github.com/psaban20/claude-conversation-manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
